# bcv-scraper

./: Cargo.toml  README.md  config.yml.example
src/: config.rs  main.rs  scraper.rs  service.rs  util.rs
