[package]
name = "bcv-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
config = "0.15.16"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.20"
